--- a/style/style.css
+++ b/style/style.css
@@ -70,6 +70,22 @@ main {
     cursor: none;
 }
 
+.note-cell {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: transparent;
+}
+
+.note-cell-parent {
+    width: 100%;
+    height: 100%;
+    display: grid;
+    grid-template-columns: 33.33333% 33.33333% 33.33333%;
+    grid-template-rows: 33.33333% 33.33333% 33.33333%;
+    font-size: 0.8em;
+}
+
 /* Code for blinking obtained: https://html-online.com/articles/blinking-text-css-animation/ */
 .blinking{
     animation: blinkingText 0.8s infinite;
